fix: multiples liadas

--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -70,7 +70,7 @@
 
 </style>
 <body>
-	<h1>MoodMoovies - El recomendador de películas que necesitas</h1>
+	<h1>MooodMoovies - El recomendador de películas que necesitas</h1>
 	<form action="http://localhost:8080/" method="post">
 
 		<!-- Selector de moods-->
