front - añadir dos generos mas

--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -122,6 +122,10 @@
 			<input type="checkbox" name="thriller" id="checkbox-9" class="genre_selector" value="yes">
 			<label for="checkbox-10">Oeste</label>
 			<input type="checkbox" name="western" id="checkbox-10" class="genre_selector" value="yes">
+			<label for="checkbox-28">Romance</label>
+			<input type="checkbox" name="romance" id="checkbox-28" class="genre_selector" value="yes">
+			<label for="checkbox-29">Ciencia Ficción</label>
+			<input type="checkbox" name="science_fiction" id="checkbox-29" class="genre_selector" value="yes">
 			</fieldset>
 
 		<!-- Selector de generos a quitar-->
@@ -148,6 +152,10 @@
 			<input type="checkbox" name="thriller" id="checkbox-19" class="genre_selector" value="no">
 			<label for="checkbox-20">Oeste</label>
 			<input type="checkbox" name="western" id="checkbox-20" class="genre_selector" value="no">
+			<label for="checkbox-30">Romance</label>
+			<input type="checkbox" name="romance" id="checkbox-30" class="genre_selector" value="yes">
+			<label for="checkbox-31">Ciencia Ficción</label>
+			<input type="checkbox" name="science_fiction" id="checkbox-31" class="genre_selector" value="yes">
 		</fieldset>
 		<!-- Selector de plataforma -->
 		<p>Por último: plataformas de las que quieres ver películas </p>
