front - añadir genero Crimen

--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -126,6 +126,8 @@
 			<input type="checkbox" name="romance" id="checkbox-28" class="genre_selector" value="yes">
 			<label for="checkbox-29">Ciencia Ficción</label>
 			<input type="checkbox" name="science_fiction" id="checkbox-29" class="genre_selector" value="yes">
+			<label for="checkbox-32">Crimen</label>
+			<input type="checkbox" name="crime" id="checkbox-32" class="genre_selector" value="yes">
 			</fieldset>
 
 		<!-- Selector de generos a quitar-->
@@ -156,6 +158,8 @@
 			<input type="checkbox" name="romance" id="checkbox-30" class="genre_selector" value="yes">
 			<label for="checkbox-31">Ciencia Ficción</label>
 			<input type="checkbox" name="science_fiction" id="checkbox-31" class="genre_selector" value="yes">
+			<label for="checkbox-33">Crimen</label>
+			<input type="checkbox" name="crime" id="checkbox-33" class="genre_selector" value="yes">
 		</fieldset>
 		<!-- Selector de plataforma -->
 		<p>Por último: plataformas de las que quieres ver películas </p>
