--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -155,11 +155,11 @@
 			<label for="checkbox-20">Oeste</label>
 			<input type="checkbox" name="western" id="checkbox-20" class="genre_selector" value="no">
 			<label for="checkbox-30">Romance</label>
-			<input type="checkbox" name="romance" id="checkbox-30" class="genre_selector" value="yes">
+			<input type="checkbox" name="romance" id="checkbox-30" class="genre_selector" value="no">
 			<label for="checkbox-31">Ciencia Ficción</label>
-			<input type="checkbox" name="science_fiction" id="checkbox-31" class="genre_selector" value="yes">
+			<input type="checkbox" name="science_fiction" id="checkbox-31" class="genre_selector" value="no">
 			<label for="checkbox-33">Crimen</label>
-			<input type="checkbox" name="crime" id="checkbox-33" class="genre_selector" value="yes">
+			<input type="checkbox" name="crime" id="checkbox-33" class="genre_selector" value="no">
 		</fieldset>
 		<!-- Selector de plataforma -->
 		<p>Por último: plataformas de las que quieres ver películas </p>
