procesamiento json de peliculas - version 1.0

--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -181,6 +181,11 @@
 			<label for="checkbox-27">Crunchyroll</label>
 			<input type="checkbox" name="crunchyroll" id="checkbox-27" class="genre_selector">
 		</fieldset>
+
+		<fieldset id="Popularity">
+			<label for="checkbox-34">Order by popularity</label>
+			<input type="checkbox" name="popularity" id="checkbox-34" class="popularity" value="yes">
+		</fieldset>
 		
 
 		<button id="search_button" name="search" href="#" >Enviar</button>
