--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<h1>MooodMoovies - El recomendador de películas que necesitas</h1>
-	<!--form action="http://localhost:8080/" class="formsearchmovies" method="post"-->
+	<!--form action="http://34.175.4.212:8080/" class="formsearchmovies" method="post"-->
 	<form action="http://localhost:8080/" class="formsearchmovies" method="post">
 	<!-- Selector de moods-->
 		<p>¿Cuál es tu mood hoy?</p>
