mejoras en el front

--- a/src/resources/front/index.html
+++ b/src/resources/front/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>MoodMoovies - Demo</title>
+	<title>MoodMoovies</title>
+	<link rel="icon" type="image/png" href="images/favicon.png">
 
 	<!--JQuery-->
     <script type="text/javascript" src="js/jquery-3.6.3.min.js"></script>
@@ -22,6 +23,7 @@
 
 <body>
 	<header>
+		<img id="logo" src="images/favicon.png" alt="Logo MoodMovies">
 		<h1>MoodMovies - El recomendador de películas que necesitas</h1>
 	</header>
 	<section>
